--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -22,3 +22,21 @@
   border-radius: 4px;
   border: none;
 }
+
+#navbar form button {
+    background-color: #f7d354;
+    border: 2px solid #f7d354;
+    border-radius: 4px;
+    color: #000;
+    padding: 0.3rem;
+    font-size: 1.3rem
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    transition: .4s;
+}
+
+#navbar form button:hover {
+    background-color: transparent;
+    color: #f7d354;
+}
